feat: add a diagnostics section
Knowing the primitives is not the same as being able to work out what a stuck process is doing.
Nothing here covered the other direction: given a system that stopped making progress, how to find
out why. There were no references to thread dumps, jstack, jcmd or JFR anywhere in the repository.

New package org.alxkm.diagnostics:

- DeadlockDetector finds lock cycles in a running JVM and prints both sides of each one, the same
  analysis that produces the "Found one Java-level deadlock" section of a thread dump. It covers
  ReentrantLock as well as monitors, but only finds cycles, so a thread blocked forever on a lock
  nobody will release is not reported and neither is a livelock.
- ThreadDumpExample puts three threads into three states and renders them the way jstack would. It
  pins down the distinction that costs people the most time: BLOCKED is contention and resolves
  when the owner releases, WAITING is a handoff that may never come. It also shows that a
  ReentrantLock never appears as BLOCKED, so grepping a dump for BLOCKED misses every lock in
  java.util.concurrent.
- VirtualThreadPinningExample measures the modern trap. On Java 21 a virtual thread that blocks
  inside synchronized cannot unmount and holds its carrier: 64 tasks blocking 500ms each took
  3060ms under synchronized against 503ms under ReentrantLock on 12 cores. Every task locks a
  monitor of its own, so nothing contends; what runs out is carriers. JEP 491 removed this in Java
  24, which the javadoc says, but 21 is the current LTS and what this repository builds against.

Only the unpinned side is asserted, since it holds regardless of core count. How much slower the
pinned side runs depends on the machine and on the JDK version, so the test reports it instead.

The README section covers taking a dump, reading the states, and the two ways to see pinning
(-Djdk.tracePinnedThreads and the jdk.VirtualThreadPinned JFR event). All output quoted there
comes from run